[package]
name = "backflip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-icon = "0.11.3"
eframe = "0.26"
image = "0.24"
global-hotkey = "0.4.2"
windows = { version = "0.54", features = ["Win32_UI_WindowsAndMessaging"] }
lazy_static = "1.4"
