[package]
name = "backflip-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-icon = "0.11.3"
image = "0.24"
global-hotkey = "0.4.2"
crossbeam-channel = "0.5"
lazy_static = "1.4"

anyhow = "1.0"
winit = "0.29"