[package]
name = "backflip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# windows_lowlevel_hooks = { path = "../windows_lowlevel_hooks" }
# windows_direct_composition = { path = "../windows_direct_composition" }
tray-icon = "0.11.3"
eframe = "0.26"
image = "0.24"
global-hotkey = "0.4.2"
crossbeam-channel = "0.5"
lazy_static = "1.4"
arboard = "3.3.2"
anyhow = "1.0"
serde_json = "1.0"


[target.'cfg(windows)'.dependencies]
clipboard-win = "5.2"