[package]
name = "windows_direct_composition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-icon = "0.11.3"
eframe = "0.26"
image = "0.24"
global-hotkey = "0.4.2"
windows = { version = "0.54", features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_DirectComposition"
] }
lazy_static = "1.4"
